@startuml

!theme monokai_npp from ..\.styles
scale 1.5

class Person {
    +last_name: <i>str</i>
    +first_name: <i>str</i>
    +patr_name: <i>str</i>
}

class Student {
    +year: <i>int</i>
}

class CatalogueCard {
    +title: <i>str</i>
    +year: <i>int</i>
}

class BookCard {
    +authors: <i>tuple</i> [Person, ...]
}

class CompendiumCard

interface dict

class Printable {
    +print() → <i>None</i>
}

hide class empty members
hide interface empty members

Person <|-- Student

CatalogueCard <|-- BookCard
CatalogueCard <|-- CompendiumCard

dict <|-- CompendiumCard

Printable <|-up- Student
Printable <|-up- CompendiumCard

@enduml
